--- a/src/assets/css/projects.css
+++ b/src/assets/css/projects.css
@@ -1,102 +1,102 @@
 :root {
-    --darkblue: #28354e;
-    --darkblue2: #3a4a67;
-    --blue: #5177ff;
+  --darkblue: #28354e;
+  --darkblue2: #3a4a67;
+  --blue: #5177ff;
 }
 
 main.projects {
-    max-width: 1500px;
-    width: 85%;
-    margin: 1rem auto;
+  max-width: 1500px;
+  width: 85%;
+  margin: 1rem auto;
 }
 
 main.projects .title {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    font-size: 45px;
-    font-size: clamp(1.5rem, 7vw, 3rem);
-    font-weight: 700;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-size: 45px;
+  font-size: clamp(1.5rem, 7vw, 3rem);
+  font-weight: 700;
 }
 
 main.projects .title .icon {
-    position: absolute;
-    transform: scaleX(-1);
-    top: 25px;
-    font-size: 40px;
-    right: -70px;
+  position: absolute;
+  transform: scaleX(-1);
+  top: 25px;
+  font-size: 40px;
+  right: -70px;
 }
 
 .projects-container {
-    justify-content: space-between;
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-column-gap: 3rem;
-    grid-row-gap: 4rem;
-    margin: 2rem 0 3rem 0;
+  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 3rem;
+  grid-row-gap: 4rem;
+  margin: 2rem 0 3rem 0;
 }
 
 .project .img-container {
-    border-radius: 10px;
-    background: var(--darkblue2);
-    padding: 0.7rem;
-    width: 100%;
-    height: 230px;
+  border-radius: 10px;
+  background: var(--darkblue2);
+  padding: 0.7rem;
+  /* width: 100%; */
+  height: 230px;
 }
 
 .project .img-container img {
-    border-radius: calc(0.7rem - 10px);
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  border-radius: calc(0.7rem - 10px);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .project {
-    position: relative;
+  position: relative;
 }
 
 .project .project-tag {
-    font-size: 14px;
-    font-size: clamp(0.6rem, 1.5vw, 1rem);
-    position: absolute;
-    top: 0;
-    margin-top: 1rem;
-    right: 0;
-    font-weight: 500;
-    border-radius: 10px;
-    padding: 0.6rem 0.8rem;
+  font-size: 14px;
+  font-size: clamp(0.6rem, 1.5vw, 1rem);
+  position: absolute;
+  top: 0;
+  margin-top: 1rem;
+  right: 0;
+  font-weight: 500;
+  border-radius: 10px;
+  padding: 0.6rem 0.8rem;
 }
 
 .project .project-title {
-    margin-top: 1.5rem;
-    font-size: clamp(0.8rem, 1.5vw, 1rem);
-    text-align: center;
+  margin-top: 1.5rem;
+  font-size: clamp(0.8rem, 1.5vw, 1rem);
+  text-align: center;
 }
 
 @media screen and (max-width: 1000px) {
-    .project .project-tag {
-        /* font-size: 1vw; */
-        /* padding: 1vw; */
-    }
+  .project .project-tag {
+    /* font-size: 1vw; */
+    /* padding: 1vw; */
+  }
 }
 
 @media screen and (max-width: 870px) {
-    .projects-container {
-        grid-template-columns: 1fr 1fr;
-    }
+  .projects-container {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media screen and (max-width: 730px) {
-    .projects-container {
-        grid-template-columns: 1fr;
-        width: 80%;
-        margin: 10% auto 0 auto;
-    }
-    /* main.projects .title {
+  .projects-container {
+    grid-template-columns: 1fr;
+    width: 80%;
+    margin: 10% auto 0 auto;
+  }
+  /* main.projects .title {
         font-size: 7vw;
     } */
-    main.projects .title .icon {
-        display: none;
-    }
+  main.projects .title .icon {
+    display: none;
+  }
 }
